# Jarvis-F.R.D.A.Y

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/workflows/: docker.yml  frontend.yml  go.yml  python.yml
backend/: .env.example
backend/bots/discord/: Dockerfile  bot.py  requirements.txt
backend/bots/shared/: client.py
backend/bots/telegram/: Dockerfile  bot.py
backend/cli/: pyproject.toml
backend/cli/jarvis_cli/: __init__.py  client.py  main.py
backend/cli/jarvis_cli/ui/: panels.py
backend/go-gateway/: Dockerfile  go.mod  go.sum
backend/go-gateway/cmd/gateway/: main.go
backend/go-gateway/internal/config/: config.go
backend/go-gateway/internal/contracts/: bootstrap.go  chat.go  envelopes.go  events.go  gpu.go  models.go  providers.go  system.go
backend/go-gateway/internal/http/handlers/: bootstrap.go  chat.go  errors.go  events.go  execution.go  gpu.go  health.go  health_test.go  local_actions.go  local_actions_test.go  memory.go  models.go  providers.go  search.go  search_test.go  self_improvement.go  system.go  tools.go  vision.go  voice.go
backend/go-gateway/internal/http/middleware/: apikey.go  client_version.go  correlation.go  cors.go  logging.go  rate_limit.go  recovery.go  session.go
backend/go-gateway/internal/http/routes/: routes.go
backend/go-gateway/internal/observability/: otel.go  prometheus.go
backend/go-gateway/internal/proxy/: ai_proxy.go
backend/go-gateway/internal/redis/: client.go
backend/go-gateway/internal/security/: masking.go  sanitize.go
backend/go-gateway/internal/streaming/: sse.go  ws.go
backend/go-gateway/pkg/version/: version.go
backend/python-ai-service/: Dockerfile  pyproject.toml
backend/python-ai-service/app/: main.py
backend/python-ai-service/app/core/: config.py  envelopes.py  errors.py  logging.py  tracing.py
backend/python-ai-service/app/db/: database.py  models.py
backend/python-ai-service/app/gpu/: detector.py  device_manager.py  workload_router.py
backend/python-ai-service/app/providers/: anthropic_provider.py  base.py  nvidia_nim.py  openai_provider.py  openrouter.py  router.py
backend/python-ai-service/app/routers/: agent.py  bootstrap.py  chat.py  execution.py  gpu.py  health.py  local_actions.py  memory.py  models.py  profile.py  providers.py  scheduler.py  search.py  self_improvement.py  skills.py  system.py  tools.py  vision.py  voice.py
backend/python-ai-service/app/scheduler/: __init__.py  worker.py
backend/python-ai-service/app/services/: agent_service.py  memory_service.py  profile_service.py  skill_service.py
backend/python-ai-service/tests/: conftest.py  test_bootstrap.py  test_health.py  test_local_actions.py  test_search.py  test_self_improvement.py  test_vision.py  test_workload_router.py
backend/rust-broker/: Cargo.toml  Dockerfile
backend/rust-broker/src/: broker.rs  config.rs  events.rs  handlers.rs  health.rs  main.rs  metrics.rs
deploy/: docker-compose.gpu.yml  docker-compose.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
frontend/: .env.example  .eslintrc.json  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/app/: App.tsx  providers.tsx  queryClient.ts  router.tsx
frontend/src/components/ui/: AppShell.tsx  CockpitButton.tsx  GlassPanel.tsx  LoadingPulse.tsx  NeonBadge.tsx  SectionHeader.tsx  Sidebar.tsx  StatusDot.tsx  TopStatusBar.tsx
frontend/src/features/bootstrap/: BootstrapGate.tsx  RecoveryScreen.tsx  bootstrapStore.ts  index.ts  useBootstrap.ts
frontend/src/features/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  chatStore.ts  chatTypes.ts  index.ts  useChat.ts
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/execution/: TerminalPanel.tsx
frontend/src/features/gpu/: GpuMetricsChart.tsx  GpuMiniIndicator.tsx  GpuStatusPanel.tsx  GpuWorkloadsPanel.tsx  gpuStore.ts  gpuTypes.ts  index.ts  useGpuStatus.ts
frontend/src/features/localActions/: LocalActionsPage.tsx
frontend/src/features/memory/: MemoryPanel.tsx
frontend/src/features/models/: ModelsPage.tsx  useModels.ts
frontend/src/features/monitoring/: MonitoringPage.tsx
frontend/src/features/providers/: ProvidersPage.tsx  useProviders.ts
frontend/src/features/search/: SearchPanel.tsx
frontend/src/features/selfImprovement/: SelfImprovementPage.tsx
frontend/src/features/settings/: SettingsPage.tsx
frontend/src/features/tools/: ToolsPanel.tsx
frontend/src/features/vision/: VisionPanel.tsx
frontend/src/features/voice/: VoicePanel.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  errors.ts  types.ts
frontend/src/lib/config/: env.ts
frontend/src/lib/query/: freshness.ts
frontend/src/lib/realtime/: eventNormalizer.ts  eventTypes.ts  sseClient.ts  wsClient.ts
frontend/src/lib/rendering/: capabilities.ts
frontend/src/lib/session/: session.ts
frontend/src/styles/: globals.css
frontend/src/test/: envelopes.test.ts  session.test.ts
scripts/: build.sh  check_gpu.sh  dev.sh  smoke_test.sh  test.sh
