[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-cli"
version = "0.2.0"
description = "JARVIS CLI — interactive terminal interface for the personal AI assistant"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
jarvis = "jarvis_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"
