[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-python-ai-service"
version = "0.2.0"
description = "JARVIS Python AI microservice — AI brain, GPU workloads, voice, memory, skills, agent, scheduler"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis[hiredis]>=5.0.3",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp-proto-http>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "structlog>=24.2.0",
    "anyio>=4.4.0",
    # Memory + indexing dependencies (imported at module import time)
    "numpy>=1.26.0",
    # DB layer (persistent memory, skills, profile, tasks)
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    # Scheduler
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
]
gpu = [
    # CPU-only torch — for systems without CUDA
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]
gpu-cuda = [
    # PyTorch with CUDA 12.1 support (covers RTX 4050 / Ada Lovelace + all CUDA 12.x GPUs).
    # Installed via the official PyTorch index — do NOT install plain "torch" alongside this.
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "faster-whisper>=1.0.3",
    # onnxruntime-gpu speeds up faster-whisper on CUDA
    "onnxruntime-gpu>=1.18.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
